--- a/css/pricing.css
+++ b/css/pricing.css
@@ -1,67 +1,15 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+:root {
+    --primary-color: #e3e3e2;
+    --secondary-color: #fefefd;
+    --text-color: #646464;
+    --nav-color: #6173c4;
+    --footer-color: #3f3f3e;
+    --button-color: #238cf2;
 }
-:root{
-    --primary-color: #1F2544;
-    --secondary-color: #474F7A;
-    --button-color: #81689D;
-    --light-color: #FFD0EC;
-}
-body{
-    background-color: var(--light-color);
-}
-header{
-    background-color: var(--primary-color);
-    text-align: center;
-    font-size: larger;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    font-weight: bold;
-}
-/* header .pagetitle{
-    font-size: x-large;
-    color: white;
-} */
-nav{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    color: white;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-}
-header ul{
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    list-style: none;
-}
-header .user{
-    margin-right: 20px;
-}
-header ul li{
-    margin: 20px;
-}
-header ul li a{
-    text-decoration: none;
-    color: white;
-}
-header ul li a:hover{
-    color: greenyellow;
-}
-
 /* Pricing main page */
-main{
-    margin-top: 100px;
-    height: 90vh;
-}
-.info hr{
-    height: 5px;
-    background-color: var(--primary-color);
+.pricing{
+    background-color: var(--text-color);
+    margin-top: 10px;
 }
 .info h2{
     font-size: 30px;
@@ -85,7 +33,8 @@ main{
     text-align: center;
     display: block;
     border-radius: 10px;
-    margin-top: 30px;
+    margin: 30px 0;
+
 }
 #card *{
     margin-bottom: 40px;
@@ -102,50 +51,5 @@ main{
     cursor: pointer;
     border-radius: 20px;
 }
-#card:hover{
-    border-right: var(--primary-color);
-    border-bottom: var(--primary-color);
-    transform: scale(1.1);
-}
 
-/* Footer */
-footer{
-    background-color: var(--primary-color);
-}
-.footercontent{
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    flex-direction: row;
-    flex-wrap: wrap;
-    color: white;
-}
-.footercontent a{
-    text-decoration: none;
-    color: white;
-}
-
-.footercontent p{
-    color: white;
-}
-.footercontent a,p,h2{
-    margin-bottom: 10px;
-    margin-left: 0;
-}
-
-.signup_login{
-    margin-left: 10px;
-}
-.signup_login a{
-    margin: 10px;
-    text-decoration: none;
-}
-.signup_login button{
-    width: 100px;
-    height: 40px;
-    border-radius: 5px;
-    background-color: var(--button-color);
-    color: white;
-
-}
 
