--- a/css/pricing.css
+++ b/css/pricing.css
@@ -8,7 +8,7 @@
 }
 /* Pricing main page */
 .pricing{
-    background-color: var(--text-color);
+    background-color: rgb(190, 190, 190);
     margin-top: 10px;
 }
 .info h2{
@@ -16,6 +16,7 @@
     position: relative;
     text-align: center;
     font-family: Georgia, 'Times New Roman', Times, serif;
+    padding: 10px;
 }
 
 .pricing_cards{
@@ -29,27 +30,77 @@
 #card{
     border: 2px solid var(--secondary-color);
     width: 20%;
-    height: 320px;
+    padding: 20px 10px;
     text-align: center;
-    display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 10px;
+    align-items: center;
     border-radius: 10px;
     margin: 30px 0;
+    background-color: white;
+    box-shadow: 5px 5px 5px gray;
+    height: 250px;
 
 }
-#card *{
-    margin-bottom: 40px;
-}
 #card p{
-    font-size: 20px;
+    font-size: 14px;
+    color: rgb(71, 70, 70);
+}
+#card h2{
+    color: var(--button-color);
+}
+#card span{
+    font-size: 25px;
+    font-weight: bold;
 }
 #card button{
-    width: 70%;
-    height: 20%;
+    padding: 10px 30px;
     background-color: var(--button-color);
     color: white;
     font-size: large;
     cursor: pointer;
     border-radius: 20px;
+    border: 2px solid var(--button-color);
+}
+#card button:hover{
+    background-color: transparent;
+    color: var(--button-color);
 }
 
+/* @media  screen and (max-width:1080px) {
+    .pricing_cards{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        flex-wrap: wrap;
+        width: 100%;
+    }
+    #card button{
+        width: 70%;
+        height: 50px;
+        text-align: center;
+        background-color: var(--button-color);
+        color: white;
+        font-size: large;
+        cursor: pointer;
+        border-radius: 20px;
+    }
+    #card{
+        border: 2px solid var(--secondary-color);
+        width: 70vw;
+        height: 70vh;
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        display: block;
+        border-radius: 10px;
+        margin: 30px 0;
+    
+    }
 
+    
+} */
