--- a/css/admin/user/complains.css
+++ b/css/admin/user/complains.css
@@ -128,9 +128,10 @@ table{
 }
 .search-table th, td{
     border: 2px solid rgb(196, 189, 189);
+    padding: 10px 20px;
 }
 table td button{
-    padding: 10px;
+    padding: 7px;
     width: 70px;
     background-color: var(--button-color);
     border: none;
