--- a/css/user/dashboard_links/complains.css
+++ b/css/user/dashboard_links/complains.css
@@ -128,9 +128,10 @@ table{
 }
 .search-table th, td{
     border: 2px solid rgb(196, 189, 189);
+    padding: 10px 20px;
 }
 table td button{
-    padding: 10px;
+    padding: 7px;
     width: 70px;
     background-color: var(--button-color);
     border: none;
@@ -139,6 +140,19 @@ table td button{
 }
 table tbody tr:nth-child(odd){
     background-color: rgb(224, 219, 219);
+}
+.addcomplain-btn{
+    padding: 10px 0;
+}
+.addcomplain-btn button{
+    background-color: var(--button-color);
+    color: white;
+    border: none;
+    border-radius: 3px;
+    width: 140px;
+    padding: 10px;
+    font-size: large;
+    cursor: pointer;
 }
 .bottom-content{
     display: flex;
