--- a/css/user/dashboard_links/requests.css
+++ b/css/user/dashboard_links/requests.css
@@ -95,7 +95,7 @@ main .container .content-title{
     background-color: lightgrey;
 }
 main .container .content{
-    width: 100%;
+    width: 80%;
     height: 93%;
     padding: 20px 20px;
 
@@ -106,55 +106,33 @@ main .container .content{
     display: flex;
     flex-direction: column;
 }
-.entries-search{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-.entries-search .entries select{
-    padding: 5px;
-}
-.entries-search .search input{
-    padding: 5px;
-}
 
-.search-table{
-    padding: 20px 0;
-}
-table{
-    border-collapse: collapse;
+form input{
+    padding: 10px 0; 
     width: 100%;
+    border: none;  
+    border-bottom: 2px solid gray; 
+    outline-style: none;
+    font-size: 15px;
 }
-.search-table th, td{
-    border: 2px solid rgb(196, 189, 189);
+form *label{
+    padding: 10px 0;
+    font-size: large;
+    font-weight: bold;
 }
-table td button{
-    padding: 10px;
-    width: 70px;
+form button{
+    margin-top: 20px;
+    padding: 10px 0;
+    width: 130px;
     background-color: var(--button-color);
-    border: none;
-    border-radius: 3px;
     color: white;
-}
-table tbody tr:nth-child(odd){
-    background-color: rgb(224, 219, 219);
-}
-.bottom-content{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    color: gray;
-    padding: 20px 0;
-}
-.bottom-content .page-entries-nav button{
-    padding: 10px;
+    font-size: 20px;
     border: none;
-    border-radius: 2px;
+    border-radius: 5px;
     cursor: pointer;
 }
-.bottom-content .page-entries-nav button:nth-child(2){
-    background-color: var(--button-color);
-    color: white;
+form button:hover{
+    background-color: white;
+    color: var(--button-color);
+    border: 1px solid var(--button-color);
 }
