--- a/css/driver/dashboard_links/assigned_requests.css
+++ b/css/driver/dashboard_links/assigned_requests.css
@@ -95,7 +95,7 @@ main .container .content-title{
     background-color: lightgrey;
 }
 main .container .content{
-    width: 80%;
+    width: 100%;
     height: 93%;
     padding: 20px 20px;
 
@@ -106,40 +106,56 @@ main .container .content{
     display: flex;
     flex-direction: column;
 }
+.entries-search{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+.entries-search .entries select{
+    padding: 5px;
+}
+.entries-search .search input{
+    padding: 5px;
+}
 
-form input{
-    padding: 10px 0; 
+.search-table{
+    padding: 20px 0;
+}
+table{
+    border-collapse: collapse;
     width: 100%;
-    border: none;  
-    border-bottom: 2px solid gray; 
-    outline-style: none;
-    font-size: 15px;
 }
-form *label{
-    padding: 10px 0;
-    font-size: large;
-    font-weight: bold;
+.search-table th, td{
+    border: 2px solid rgb(196, 189, 189);
+    padding: 10px 20px;
 }
-form button{
-    margin-top: 20px;
-    padding: 10px 0;
-    width: 130px;
+table td button{
+    padding: 7px;
+    width: 70px;
     background-color: var(--button-color);
-    color: white;
-    font-size: 20px;
     border: none;
-    border-radius: 5px;
+    border-radius: 3px;
+    color: white;
+}
+table tbody tr:nth-child(odd){
+    background-color: rgb(224, 219, 219);
+}
+.bottom-content{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    color: gray;
+    padding: 20px 0;
+}
+.bottom-content .page-entries-nav button{
+    padding: 10px;
+    border: none;
+    border-radius: 2px;
     cursor: pointer;
 }
-form button:hover{
-    background-color: white;
-    color: var(--button-color);
-    border: 1px solid var(--button-color);
-}
-
-form select {
-    padding: 10px 0;
-}
-form select option {
-    padding: 5px;
+.bottom-content .page-entries-nav button:nth-child(2){
+    background-color: var(--button-color);
+    color: white;
 }
