--- a/css/admin/driver/add_driver.css
+++ b/css/admin/driver/add_driver.css
@@ -1,136 +1,44 @@
-:root {
-    --primary-color: #e3e3e2;
-    --secondary-color: #fefefd;
-    --text-color: #646464;
-    --nav-color: #6173c4;
-    --footer-color: #3f3f3e;
-    --button-color: #238cf2;
+@import url(../common.css);
+
+main .container .content-title {
+  width: 100%;
+  height: 6vh;
+  padding: 10px;
+  background-color: lightgrey;
 }
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: sans-serif;
-}
-nav{
-    background-color: var(--nav-color);
-    color: whitesmoke;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: row;
-    padding: 10px;
-}
-nav .systemname-dashboard{
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    font-size: large;
-    flex-direction: row;
-}
-nav .nav-icons{
-    display: flex;
-    align-items: center;
-    gap: 40px;
-    padding: 0 20px;
-    flex-direction: row;
+main .container .content-wrapper {
+  background-color: white;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
-main{
-    display: flex;
-    flex-direction: row;
+form input {
+  margin: 10px 0;
+  padding: 10px 0;
+  width: 100%;
+  border: none;
+  border-bottom: 2px solid gray;
+  outline-style: none;
+  font-size: large;
 }
-main .side-bar{
-    width: 15%;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-
+form *label {
+  padding: 10px 0;
 }
-main .side-bar .personal-info{
-    text-align: center;
-    margin-top: 10px;
+form button {
+  margin-top: 20px;
+  padding: 10px 0;
+  width: 100px;
+  background-color: blue;
+  color: white;
+  font-size: 20px;
+  border: none;
+  border-radius: 5px;
+  border: 2px solid blue;
 }
-main .side-bar .personal-info img{
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;    
-}
-main .side-bar .personal-info .name, .email{
-    padding: 5px;   
-}
-main .side-bar hr{
-    background-color: black;
-    width: 100%;
-    height: 1px;
-    border: none;
-}
-main .side-bar .side-links ul{
-    display: flex;
-    flex-direction: column;
-    list-style: none;
-}
-main .side-bar .side-links ul li{
-    padding: 5px 0;
-}
-main .side-bar .side-links ul li a{
-    text-decoration: none;
-    color: rgb(65, 60, 60);
-    font-weight: bold;
-    font-size: 15px;
-}
-main .side-bar .side-links ul li a:hover{
-    color: brown;
-}
-main .container{
-    width: 85%;
-    background-color: lavender;
-    display: flex;
-    flex-direction: column;
-}
-main .container .content-title{
-    width: 100%;
-    height: 7%;
-    padding: 10px;
-    background-color: lightgrey;
-}
-main .container .content{
-    width: 80%;
-    height: 93%;
-    padding: 20px 20px;
-
-}
-.container .content-wrapper{
-    background-color: white;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-}
-
-form input{
-    padding: 10px 0; 
-    width: 100%;
-    border: none;  
-    border-bottom: 2px solid gray; 
-    outline-style: none;
-    font-size: large;
-}
-form *label{
-    padding: 10px 0;
-}
-form button{
-    margin-top: 20px;
-    padding: 10px 0;
-    width: 100px;
-    background-color: var(--button-color);
-    color: white;
-    font-size: 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-form button:hover{
-    background-color: white;
-    color: var(--button-color);
-    border: 1px solid var(--button-color);
+form button:hover {
+  cursor: pointer;
+  background-color: transparent;
+  color: blue;
 }
