--- a/css/admin/driver/manage_driver.css
+++ b/css/admin/driver/manage_driver.css
@@ -1,161 +1,80 @@
-:root {
-    --primary-color: #e3e3e2;
-    --secondary-color: #fefefd;
-    --text-color: #646464;
-    --nav-color: #6173c4;
-    --footer-color: #3f3f3e;
-    --button-color: #238cf2;
+@import url(../common.css);
+
+main .container .content-title {
+  width: 100%;
+  height: 6vh;
+  padding: 10px;
+  background-color: lightgrey;
 }
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: sans-serif;
+main .container .content {
+  width: 100%;
+  height: 93%;
+  padding: 20px 20px;
 }
-nav{
-    background-color: var(--nav-color);
-    color: whitesmoke;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: row;
-    padding: 10px;
+main .container .content-wrapper {
+  background-color: white;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
-nav .systemname-dashboard{
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    font-size: large;
-    flex-direction: row;
+.entries-search {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
-nav .nav-icons{
-    display: flex;
-    align-items: center;
-    gap: 40px;
-    padding: 0 20px;
-    flex-direction: row;
+.entries-search .entries select {
+  padding: 5px;
+}
+.entries-search .search input {
+  padding: 5px;
 }
 
-main{
-    display: flex;
-    flex-direction: row;
+.search-table {
+  padding: 20px 0;
 }
-main .side-bar{
-    width: 15%;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-
+table {
+  border-collapse: collapse;
+  width: 100%;
 }
-main .side-bar .personal-info{
-    text-align: center;
-    margin-top: 10px;
-}
-main .side-bar .personal-info img{
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;    
-}
-main .side-bar .personal-info .name, .email{
-    padding: 5px;   
-}
-main .side-bar hr{
-    background-color: black;
-    width: 100%;
-    height: 1px;
-    border: none;
-}
-main .side-bar .side-links ul{
-    display: flex;
-    flex-direction: column;
-    list-style: none;
-}
-main .side-bar .side-links ul li{
-    padding: 5px 0;
-}
-main .side-bar .side-links ul li a{
-    text-decoration: none;
-    color: rgb(65, 60, 60);
-    font-weight: bold;
-    font-size: 15px;
-}
-main .side-bar .side-links ul li a:hover{
-    color: brown;
-}
-main .container{
-    width: 85%;
-    background-color: lavender;
-    display: flex;
-    flex-direction: column;
-}
-main .container .content-title{
-    width: 100%;
-    height: 7%;
-    padding: 10px;
-    background-color: lightgrey;
-}
-main .container .content{
-    width: 100%;
-    height: 93%;
-    padding: 20px 20px;
-
-}
-.container .content-wrapper{
-    background-color: white;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-}
-.entries-search{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-.entries-search .entries select{
-    padding: 5px;
-}
-.entries-search .search input{
-    padding: 5px;
+.search-table th,
+td {
+  border: 2px solid rgb(196, 189, 189);
+  padding: 10px 20px;
 }
 
-.search-table{
-    padding: 20px 0;
+table td div {
+  display: flex;
+  gap: 10px;
 }
-table{
-    border-collapse: collapse;
-    width: 100%;
+
+table td button {
+  padding: 7px 10px;
+  width: 70px;
+  background-color: blue;
+  border: none;
+  border-radius: 3px;
+  color: white;
 }
-.search-table th, td{
-    border: 2px solid rgb(196, 189, 189);
-    padding: 10px 20px;
+table tbody tr:nth-child(odd) {
+  background-color: rgb(224, 219, 219);
 }
-table td button{
-    padding: 7px 10px;
-    width: 70px;
-    background-color: var(--button-color);
-    border: none;
-    border-radius: 3px;
-    color: white;
+.bottom-content {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  color: gray;
+  padding: 20px 0;
 }
-table tbody tr:nth-child(odd){
-    background-color: rgb(224, 219, 219);
+.bottom-content .page-entries-nav button {
+  padding: 10px;
+  border: none;
+  border-radius: 2px;
+  cursor: pointer;
 }
-.bottom-content{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    color: gray;
-    padding: 20px 0;
-}
-.bottom-content .page-entries-nav button{
-    padding: 10px;
-    border: none;
-    border-radius: 2px;
-    cursor: pointer;
-}
-.bottom-content .page-entries-nav button:nth-child(2){
-    background-color: var(--button-color);
-    color: white;
+.bottom-content .page-entries-nav button:nth-child(2) {
+  background-color: blue;
+  color: white;
 }
