--- a/css/admin/login.css
+++ b/css/admin/login.css
@@ -1,87 +1,95 @@
-:root {
-    --primary-color: #e3e3e2;
-    --secondary-color: #fefefd;
-    --text-color: #646464;
-    --nav-color: #6173c4;
-    --footer-color: #3f3f3e;
-    --button-color: #238cf2;
-}
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-body{
-    background-color: var(--primary-color);
-    font-family: sans-serif;
+@import url(../common.css);
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 8vh;
+  width: 100%;
+  padding: 0 10px;
+  background-color: var(--secondary-color);
+  color: white;
 }
 
-main{
-    margin: auto;
-    width: 400px;
-    
+nav .logo {
+  text-transform: capitalize;
+  font-weight: bold;
 }
-main .project-title{
-    padding: 20px;
-    margin-top: 30px;
-    text-align: center;
-    font-size: 20px;
-    font-weight: bold;
-    color: brown;
-}
-main form{
-    width: 100%;
-    height: auto;
-    background-color: var(--secondary-color);
-    border-radius: 10px;
-    
-       
-}
-form .form-heading{
-    text-align: center;
-    padding: 10px;
-    font-size: 20px;
-    font-weight: bold;
-}
-main form input[type="text"], main form input[type="password"]{
-    display: block;
-    padding: 15px 10px;
-    margin: 20px;
-    outline-color: var(--button-color);
-    width: 90%;
-    border: none;
-    border-bottom: 2px solid gray;
-}
-form #remember{
-    margin: 0 20px;
 
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 92vh;
 }
-form button[type="submit"]{
-    margin: 20px;
-    width: 90%;
-    border-radius: 10px;
-    background-color: var(--button-color);
-    text-align: center;
-    font-size: large;
-    color: white;  
-    padding: 15px 0; 
-    border: 2px solid var(--button-color); 
+main .login-error {
+  background-color: rgb(255, 0, 0, 0.3);
+  padding: 10px;
+  border-radius: 5px;
+  width: 40%;
+  margin-bottom: 10px;
+  color: red;
+}
 
+main .login-container {
+  background-color: white;
+  padding: 10px;
+  border-radius: 10px;
+  width: 40%;
+  box-shadow: 5px 5px 5px 5px rgb(114, 114, 114);
 }
-form button:hover{
-    background-color: transparent;
-    color: var(--button-color);
-    cursor: pointer;
+
+main .login-container .form-title {
+  text-align: center;
+  margin-bottom: 10px;
 }
-form ul{
-    list-style: none;
-    text-align: center;
+
+main .login-container .form-input {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  margin: 10px 0;
 }
-form ul li{
-    padding: 10px;
+
+main .login-container .form-input span,
+main .login-container .form-input input[type="email"],
+main .login-container .form-input input[type="password"] {
+  padding: 10px;
+  font-size: 16px;
 }
-form ul li a{
-    text-decoration: none;
-    color: var(--button-color);
-    font-size: 15px;
+
+main .login-container .form-input span {
+  background-color: var(--secondary-color);
+  color: white;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+main .login-container .form-input input[type="email"],
+main .login-container .form-input input[type="password"] {
+  border: none;
+  flex: 1;
+  background-color: var(--primary-color);
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  outline-color: var(--secondary-color);
+}
+
+main .login-container .submission input[type="submit"] {
+  background-color: var(--secondary-color);
+  border: 2px solid var(--secondary-color);
+  color: white;
+  padding: 10px 0;
+  width: 100%;
+  border-radius: 5px;
+  margin-top: 10px;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+main .login-container .submission input[type="submit"]:hover {
+  background-color: transparent;
+  color: var(--secondary-color);
+  cursor: pointer;
 }
