--- a/css/driver/driver.css
+++ b/css/driver/driver.css
@@ -1,87 +1,103 @@
 :root {
-    --primary-color: #e3e3e2;
-    --secondary-color: #fefefd;
-    --text-color: #646464;
-    --nav-color: #6173c4;
-    --footer-color: #3f3f3e;
-    --button-color: #238cf2;
+  --primary-color: #e3e3e2;
+  --secondary-color: #fefefd;
+  --text-color: #646464;
+  --nav-color: #6173c4;
+  --footer-color: #3f3f3e;
+  --button-color: #238cf2;
 }
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-body{
-    background-color: var(--primary-color);
-    font-family: sans-serif;
+body {
+  background-color: var(--primary-color);
+  font-family: sans-serif;
 }
 
-main{
-    margin: auto;
-    width: 400px;
-    
+main {
+  margin: auto;
+  width: 400px;
 }
-main .project-title{
-    padding: 20px;
-    margin-top: 30px;
-    text-align: center;
-    font-size: 20px;
-    font-weight: bold;
-    color: brown;
+main .project-title {
+  padding: 20px;
+  margin-top: 30px;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  color: brown;
 }
-main form{
-    width: 100%;
-    height: auto;
-    background-color: var(--secondary-color);
-    border-radius: 10px;
-    
-       
+main form {
+  width: 100%;
+  height: auto;
+  background-color: var(--secondary-color);
+  border-radius: 10px;
 }
-form .form-heading{
-    text-align: center;
-    padding: 10px;
-    font-size: 20px;
-    font-weight: bold;
+form .form-heading {
+  text-align: center;
+  padding: 10px;
+  font-size: 20px;
+  font-weight: bold;
 }
-main form input[type="text"], main form input[type="password"]{
-    display: block;
-    padding: 15px 10px;
-    margin: 20px;
-    outline-color: var(--button-color);
-    width: 90%;
-    border: none;
-    border-bottom: 2px solid gray;
+main form input[type="text"],
+main form input[type="password"] {
+  display: block;
+  padding: 15px 10px;
+  margin: 20px;
+  outline-color: var(--button-color);
+  width: 90%;
+  border: none;
+  border-bottom: 2px solid gray;
 }
-form #remember{
-    margin: 0 20px;
+form #remember {
+  margin: 0 20px;
+}
+form button[type="submit"] {
+  margin: 20px;
+  width: 90%;
+  border-radius: 10px;
+  background-color: var(--button-color);
+  text-align: center;
+  font-size: large;
+  color: white;
+  padding: 15px 0;
+  border: 2px solid var(--button-color);
+}
+form button:hover {
+  background-color: transparent;
+  color: var(--button-color);
+  cursor: pointer;
+}
+form ul {
+  list-style: none;
+  text-align: center;
+}
+form ul li {
+  padding: 10px;
+}
+form ul li a {
+  text-decoration: none;
+  color: var(--button-color);
+  font-size: 15px;
+}
 
+main .form-warning img {
+  width: 30px;
+  height: 30px;
 }
-form button[type="submit"]{
-    margin: 20px;
-    width: 90%;
-    border-radius: 10px;
-    background-color: var(--button-color);
-    text-align: center;
-    font-size: large;
-    color: white;  
-    padding: 15px 0; 
-    border: 2px solid var(--button-color); 
+main .form-warning {
+  background-color: rgb(255, 0, 0, 0.3);
+  padding: 5px 10px;
+  margin-bottom: 10px;
+  border-radius: 10px;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
 
-}
-form button:hover{
-    background-color: transparent;
-    color: var(--button-color);
-    cursor: pointer;
-}
-form ul{
-    list-style: none;
-    text-align: center;
-}
-form ul li{
-    padding: 10px;
-}
-form ul li a{
-    text-decoration: none;
-    color: var(--button-color);
-    font-size: 15px;
+main .form-warning span {
+  font-size: 16px;
+  font-weight: bold;
+  color: red;
 }
