--- a/css/user/dashboard.css
+++ b/css/user/dashboard.css
@@ -1,151 +1,50 @@
-:root {
-    --primary-color: #e3e3e2;
-    --secondary-color: #fefefd;
-    --text-color: #646464;
-    --nav-color: #6173c4;
-    --footer-color: #3f3f3e;
-    --button-color: #238cf2;
-}
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: sans-serif;
-}
-nav{
-    background-color: var(--nav-color);
-    color: whitesmoke;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: row;
-    padding: 10px;
-}
-nav .systemname-dashboard{
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    font-size: large;
-    flex-direction: row;
-}
-nav .nav-icons{
-    display: flex;
-    align-items: center;
-    gap: 40px;
-    padding: 0 20px;
-    flex-direction: row;
+@import url(common.css);
+
+.container .content .content-name {
+  color: brown;
+  padding: 10px 0;
+  font-weight: bold;
+  font-size: large;
 }
 
-main{
-    display: flex;
-    align-items: center;
-    flex-direction: row;
+.container .content button {
+  width: 100px;
+  padding: 10px 0;
+  color: white;
+  background-color: blue;
+  border: 2px solid blue;
+  border-radius: 5px;
+  cursor: pointer;
 }
-main .side-bar{
-    width: 15%;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    gap: 10px;
 
+.container .content button:hover {
+  background-color: transparent;
+  color: blue;
 }
-main .side-bar .personal-info{
-    text-align: center;
-}
-main .side-bar .personal-info img{
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;    
-}
-main .side-bar .personal-info .name, .email{
-    padding: 5px;   
-}
-main .side-bar hr{
-    background-color: black;
-    width: 100%;
-    height: 1px;
-    border: none;
-}
-main .side-bar .side-links ul{
-    display: flex;
-    flex-direction: column;
-    list-style: none;
-}
-main .side-bar .side-links ul li{
-    padding: 5px;
-}
-main .side-bar .side-links ul li a{
-    text-decoration: none;
-    color: rgb(65, 60, 60);
-    font-weight: bold;
-    font-size: 15px;
-}
-main .side-bar .side-links ul li a:hover{
-    color: brown;
-}
-main .container{
-    width: 85%;
-    background-color: lavender;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-}
-main .container .content-title{
-    width: 100%;
-    height: 7%;
-    padding: 10px;
-    background-color: lightgrey;
-}
-main .container .content{
-    width: 100%;
-    height: 93%;
-    padding: 20px 20px;
 
+.container .content .content-cards {
+  display: flex;
+  padding: 20px;
+  flex-wrap: wrap;
+  gap: 30px;
 }
-.container .content-wrapper{
-    background-color: white;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
+.container .content .content-card {
+  border: 2px solid rgb(66, 66, 66);
+  padding: 10px;
+  border-radius: 5px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
-.container .content-wrapper .content-name{
-    color: brown;
-    padding: 10px 0;
-    font-weight: bold;
-    font-size: large;
+.container .content .content-card .content-card-title {
+  font-weight: bold;
 }
-.container .content-wrapper button{
-    width: 100px;
-    padding: 10px 0;
-    background-color: var(--button-color);
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+.container .content .content-card .content-card-count {
+  font-weight: bold;
+  font-size: 40px;
 }
-.container .content-wrapper .content-cards{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 60px;
-    padding: 20px 0;
-}
-.container .content-wrapper .content-card{
-    /* border: 2px solid black; */
-    padding: 10px 20px;
-    border: none;
-    box-shadow: 5px 5px 5px black;    
-}
-.container .content-wrapper .content-card .content-card-title{
-    padding: 10px 0;
-}
-.container .content-wrapper .content-card .content-card-count{
-    padding: 10px 0;
-}
-.container .content-wrapper .content-card .content-card-details{
-    padding: 10px 0;
-}
-.container .content-wrapper .content-card .content-card-details a{
-    text-decoration: none;
-    font-weight: bold;
+
+.container .content .content-card .content-card-details a {
+  color: rgb(89, 89, 248);
 }
